# yomite

./: .envrc  .gitattributes  .tokeignore  README.md  __main__.py  flake.nix  hypr.py  pyproject.toml  requirements.txt  utils.py
src/: __main__.py
src/static/: script.js
src/yomite/: __main__.py
src/yomite/static/: script.js
src/yomite/templates/: index.html  index.html.jinja
static/: script.js
templates/: index.html.jinja
