[project]
name = "yomite"
version = "0.1.0"
description = "Local OCR helper, primarily intended for reading visual novels in Japanese."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
yomite = "yomite.__main__:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
